# urchin-rust

./: AGENTS.md  Cargo.toml  README.md
crates/urchin-cli/: Cargo.toml
crates/urchin-cli/src/: main.rs
crates/urchin-collectors/: Cargo.toml
crates/urchin-collectors/src/: agent_bridge.rs  claude.rs  copilot.rs  gemini.rs  git.rs  lib.rs  shell.rs
crates/urchin-core/: Cargo.toml
crates/urchin-core/src/: config.rs  event.rs  identity.rs  journal.rs  lib.rs
crates/urchin-intake/: Cargo.toml
crates/urchin-intake/src/: lib.rs  server.rs
crates/urchin-mcp/: Cargo.toml
crates/urchin-mcp/src/: lib.rs  server.rs  tools.rs
crates/urchin-vault/: Cargo.toml
crates/urchin-vault/src/: contract.rs  lib.rs  projection.rs  writer.rs
