[workspace]
members = [
    "crates/urchin-core",
    "crates/urchin-intake",
    "crates/urchin-mcp",
    "crates/urchin-collectors",
    "crates/urchin-vault",
    "crates/urchin-cli",
]
resolver = "2"

[workspace.dependencies]
tokio       = { version = "1", features = ["full"] }
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
axum        = "0.8"
clap        = { version = "4", features = ["derive"] }
anyhow      = "1"
tracing     = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono      = { version = "0.4", features = ["serde"] }
uuid        = { version = "1", features = ["v4", "serde"] }
notify      = "6"
dirs        = "5"
