[package]
name    = "urchin-mcp"
version = "0.1.0"
edition = "2021"

[dependencies]
urchin-core = { path = "../urchin-core" }
tokio       = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
anyhow      = { workspace = true }
tracing     = { workspace = true }
chrono      = { workspace = true }

[dev-dependencies]
tempfile = "3"
